<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="parse_app_id">YOUR_APPLICATION_ID</string>
    <string name="parse_client_key">YOUR_CLIENT_KEY</string>

    <string name="app_name">ProConnect Mobile</string>

    <string name="title_section1">Home</string>
    <string name="title_section2">Search</string>
    <string name="title_section3">Profile</string>
    <string name="title_section4">Contacts</string>
    <string name="title_section5">Setting</string>
    <string name="title_section6">Forum</string>
    <string name="title_section7">Find Random Artist</string>
    <string name="title_section8">Sign Out</string>
    <string name="title_section9">Exit</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Does Nothing</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_home">ProConnect Mobile</string>
    <string name="emaillabel">Email Address</string>
    <string name="exampleemail">killme@example.com</string>
    <string name="enotificationtext">Recieve Email Notifications</string>
    <string name="getpremiumpromotion">Go Premium!</string>
    <string name="passwordchangestring">Change Password</string>
    <string name="passworddefaulttext">username</string>
    <string name="Premiumtexttrue">Premium Subscription Membership</string>
    <string name="PremiumButtonTextTrue">Leave forever?</string>
    <string name="premiumpromotionbuttontrue">Join the club</string>
    <string name="pwupdateemailtext">SendUpdateEmail</string>
    <string name="DeleteAccountText">Delete Account</string>
    <string name="deleteaccbuttontext">End it All</string>


    <string-array name="searchableItems">
        <item>artistname</item>
        <item>profession</item>
        <item>hometown</item>
    </string-array>

</resources>
